feat: add good view for bulk-add link in admin pages for NewDirection models

--- a/django_fastapi/general_models/templates/admin/bulk_create_directions.html
+++ b/django_fastapi/general_models/templates/admin/bulk_create_directions.html
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>Создание направлений</h1>
+<h1>{{ title_text }}</h1>
 
 <form method="post">
     {% csrf_token %}
